# Project-Nyra

./: -AlienApotheosis.gitignore  .env.development  .env.example  .gitignore  .gitinclude  .infisical.json  .kilocodemodes  .pre-commit-config.yaml  CLAUDE-FLOW-WORKFLOW-GUIDE.md  CLAUDE.md  DEMO-NYRA-SYSTEM.ps1  NEXT_STEPS.md  NYRA-Claude-Flow-Complete-Setup.ps1  NYRA.code-workspace  PROJECT_COMPARISON_REPORT.md  QUICK_ROTATION_LINKS.md  README-GITHUB-ACTIONS.md  README-MEMORY-STACK.md  README.md  README_SETUP.md  RYE_TO_UV_MIGRATION_SUMMARY.md  Start-NYRA-Development.ps1  dev.json  directory-structure.txt  docker-compose.yml  gordon-mcp.yml  mcp.json  nyra-config.json  pyproject.toml  requirements.txt  setup-dev.ps1  setup-github-actions.ps1  setup-memory-stack.ps1  structure2.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: automerge.yml  ci-cd.yml  ci.yml  dependency-management.yml  dev-workflow.yml  docs.yml  release.yml
.infisical/: compose.yaml
archive/2025-10-13-original-structure/nyra-core/nyra-orchestration/archon/: pyproject.toml
archive/2025-10-13-original-structure/nyra-core/nyra-orchestration/archon/archon-ui-main/: package-lock.json  package.json
archive/2025-10-13-original-structure/nyra-core/nyra-orchestration/archon/docs/: package-lock.json  package.json
archive/2025-10-13-original-structure/nyra-mcp-servers/local/metamcp/: pyproject.toml
config-consolidated/: AI-Stack-Integration-Plan.md  Make-NyraMemoryZip.ps1  NYRA-Dependency-Graph.md  PROJECT_CONSOLIDATION_AUDIT.md  Start-NyraEcosystem.ps1
config-consolidated/archon-system/: archon-deployment-config.yml
config-consolidated/claude-ecosystem/: claude-desktop-config.json
config-consolidated/environments/: README.md
config-consolidated/metamcp/: unified-metamcp-config.json
configs/mcp/: nyra-mcp-config.json
docs/extraction_scripts/: 1_extract_archives.ps1  RUN_ME_INSTRUCTIONS.md
docs/scripts/: connect-mcp-ecosystem.ps1  setup-mcp-servers.ps1
infra/docker/: docker-compose.yml
mcp-ecosystem/: README.md  WARP-MCP-INTEGRATION-RULES.md  commit-progress.ps1  deploy-nyra-ecosystem.ps1  mcp-servers-config.json  mcp_manager.ps1  path_fix_script.ps1  rename_nyramcp_script.ps1  warp-mcp-config.json
mcp-ecosystem/BitwardenMCP/: CLAUDE.md  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  smithery.yaml
mcp-ecosystem/ClaudeFlowMCP/: claude-dump.txt  start-claude-flow.ps1
mcp-ecosystem/FileSystemMCP/: CONNECTOR_CREATE_FORM.txt  CONNECTOR_CREATE_FORM_MSAPP.txt  Dockerfile.mcp  README_RUN.md  README_RUN.md.bak  bootstrap_and_emit_connector.ps1  bootstrap_and_emit_connector.ps1.bak  docker-compose.yml  docker-compose.yml.bak  fix_project.ps1  fix_project.ps1.bak  repair_ngrok.ps1  repair_ngrok.ps1.bak  restore_nyramcp.ps1  restore_nyramcp.ps1.bak  start_nyramcp_infisical.bat  start_nyramcp_infisical.bat.bak  switch_to_no_auth.ps1  switch_to_no_auth.ps1.bak  unblock_all.ps1
mcp-ecosystem/GeminiCLI/: gemini.mjs  package-lock.json  package.json  vertex.js
mcp-ecosystem/GithubMCP/: Dockerfile.mcp  bootstrap_githubmcp.ps1  bootstrap_githubmcp.ps1.bak  docker-compose.yml  finish_githubmcp.ps1  finish_githubmcp.ps1.bak  github_ngrok_doctor.ps1  github_ngrok_doctor.ps1.bak  install_github_git_tools.ps1  install_github_git_tools.ps1.bak  isolate_githubmcp.ps1  isolate_githubmcp.ps1.bak  repair_bootstrap_githubmcp.ps1  repair_bootstrap_githubmcp.ps1.bak  start_githubmcp_infisical.bat
mcp-ecosystem/Infisical/: ONE-TIME-SETUP-ENV-VARIABLES.md  package-lock.json  package.json
mcp-ecosystem/KiloCodeMCP/: package-lock.json  package.json
mcp/channels/: nyra.memory.sse.json
multi-device-orchestrator/: NYRA-DeviceOrchestrator.ps1  README.md  SETUP-GUIDE.md  Setup-NYRAOrchestrator.ps1
nyra-configs/: .env  .env.me  .env.vault
nyra-core/nyra-agents/Scaffolding-Stack/: README.md  bootstrap.bat  bootstrap.ps1  pyproject.toml
nyra-core/nyra-agents/Scaffolding-Stack/AgentZero/prompts/profiles/: nyra-a0-archon.md
nyra-core/nyra-agents/Scaffolding-Stack/DeepCode/: mcp_agent.secrets.yaml
nyra-core/nyra-agents/Scaffolding-Stack/Scaffolding-and-Setups/claude_stack_bundle/claude_router/: README.md
nyra-core/nyra-agents/Scaffolding-Stack/Scaffolding-and-Setups/claude_stack_bundle/configs/: launch.ps1  launch.sh
nyra-core/nyra-agents/Scaffolding-Stack/Scaffolding-and-Setups/claude_stack_bundle/mcp_server/mcp-knowledge-graph/: config.json
nyra-core/nyra-agents/Scaffolding-Stack/Scaffolding-and-Setups/claude_stack_bundle/mcp_server/notioneer/: README.md
nyra-core/nyra-agents/Scaffolding-Stack/Scaffolding-and-Setups/claude_stack_bundle/memory/basic_memory/: README.md
nyra-core/nyra-agents/Scaffolding-Stack/Scaffolding-and-Setups/claude_stack_bundle/memory/future_extensions/graphiti/: README.md
nyra-core/nyra-agents/Scaffolding-Stack/Scaffolding-and-Setups/claude_stack_bundle/memory/future_extensions/memGPT/: README.md
nyra-core/nyra-agents/Scaffolding-Stack/Scaffolding-and-Setups/claude_stack_bundle/memory/future_extensions/memOS/: README.md
nyra-core/nyra-agents/Scaffolding-Stack/Scaffolding-and-Setups/letmedoit/package/letmedoit_b4_v3/utils/: terminal_system_command_prompt.py
nyra-core/nyra-agents/Scaffolding-Stack/memory/: memory_api.py  memory_check.py
nyra-core/nyra-agents/Scaffolding-Stack/orchestrator/: seed_tasks.py
nyra-core/nyra-agents/Scaffolding-Stack/prompts/: AGENTZERO_FIRST_TASK.txt
nyra-core/nyra-agents/Scaffolding-Stack/run/deepcode_instances/dc_01/: TASK_PROMPT.txt
nyra-mcp-servers/local/archon-mcp/: main.py  pyproject.toml
nyra-mcp-servers/local/infisical-mcp/: main.py  pyproject.toml
nyra-mcp-setup/: CLAUDE_CODE_INTEGRATION.md
nyra-memory/: README.md
nyra-repo-assets/: Github-Description.txt
nyra-scripts/: NyraAgentGUI (1).ps1  bootstrap_min.ps1  nyra-agent-importerPS5.ps1
nyra-voice/: .gitignore  docker-compose.yml  elevenlabs_handler.py  runner.py
nyra-webapp/: intake-form.html
scripts/: batch-rotate.ps1  initialize-agents.py  nyra-mcp.ps1  swap-secret.ps1
(+311 files in other folders)
