[project]
name = "nyra-orch"
version = "0.1.1"
description = "NYRA Orchestrator + FastMCP (Google CSE + Firecrawl) + Chroma"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12",
    "chromadb>=0.5.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "anyio>=4.4.0"
]

[tool.rye]
managed = true

[tool.rye.scripts]
mcp = "python fastmcp/server.py"
archon = "python orchestrator/archon_orchestrator.py"
memory-check = "python memory/memory_check.py"
deepcode-seed = "python orchestrator/seed_tasks.py"
