[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyra-metamcp"
version = "0.1.0"
description = "MetaMCP orchestrator for NYRA MCP servers"
authors = [{name = "NYRA", email = "dev@nyra.ai"}]
dependencies = [
    "mcp>=1.0.0",
    "asyncio-throttle>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
nyra-metamcp = "main:main"
